2004-05-17  Frank Warmerdam  <warmerdam@pobox.com>

	* proj.spec: Change PACKAGE_NAME from "PROJ" to "proj".

2004-05-12  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: update translation for potsdam datum. 

	http://bugzilla.remotesensing.org/show_bug.cgi?id=566

2004-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: Made sword[] larger in get_opt() so long +towgs84
	parameters or long +nadgrids parameters aren't truncated.

Rel. 4.4.8 2004-05-04
-------------------------------------------------------------------------
	
2004-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* 4.4.8 release re-issued. 

	* nad/epsg: regenerated with prime meridian problems corrected.
	
	http://bugzilla.remotesensing.org/show_bug.cgi?id=510

2004-05-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.4.8 release.

	* src/pj_datums.c: added nzgd49 datum definition

	http://bugzilla.remotesensing.org/show_bug.cgi?id=339

	* nad/epsg: updated to EPSG 6.5.

	* src/pj_transform.c: fixed so that raw ellipsoids are handled
	in datum shifting as if they had a +towgs84=0,0,0.

	* src/pj_transform.c: Fixed so that prime meridian offsets are
	applied even if the coordinate system is not lat/long.

	http://bugzilla.remotesensing.org/show_bug.cgi?id=510

	* src/geocent.c: Updated Geocentric_To_Geodetic computation to 	be 
	iterative to reduce error as per Wenzel, H.-G.(1985): Hochauflösende 
	Kugelfunktionsmodelle für das Gravitationspotential der Erde. Wiss. 
	Arb. Univ. Hannover Nr. 137, p. 130-131.  Fix adapted to geocent.c and
	submitted by Lothar Gorling.

	http://bugzilla.remotesensing.org/show_bug.cgi?id=563

2004-04-15  Frank Warmerdam  <warmerdam@pobox.com>

	* src/makefile.vc: Define HAVE_STRERROR.

	* src/projects.h: PJD_ERR_GEOCENTRIC now -45, and added to 
	pj_strerrno.c.

	* src/pj_release.c: added pj_get_release() function.

2004-02-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/other.extra: updated from some WKT definition Daniel got from
	CubeWerx.